MDL-71003 user: fix alignment of autocomplete participant filters.

--- a/theme/classic/style/moodle.css
+++ b/theme/classic/style/moodle.css
@@ -7092,7 +7092,7 @@ a.close.disabled {
 .align-baseline {
   vertical-align: baseline !important; }
 
-.align-top {
+.align-top, [data-filterregion="value"] div:first-of-type {
   vertical-align: top !important; }
 
 .align-middle {
